Web Feb 28 18:47:14 2001  Lee Mallabone <lee0@callnetuk.com>

        * gdmconfig-pam, gdmconfig-security: New files to support
	priviledged non-root users running gdmconfig.
	
	* Makefile.am, configure.in, gdm.spec.in: Add option to configure
	to --enable-console-helper for gdmconfig.

Tue Feb 27 16:44:34 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: apply patch from Vlad Harchev <hvv@hippo.ru>
	  to not force the adobe helvetica font and to exclude postgres and
	  pvm users by default

Tue Feb 27 13:27:00 2001  Lee Mallabone <lee0@callnetuk.com>

        * gui/gdmconfig.c, gui/gdmconfig-strings.c, gui/gdmconfig.glade:
	Fix version number and add bugzilla URL to about box.

2001-02-27  Gediminas Paulauskas <menesis@delfi.lt>

	* gdmconfig/Makefile.am: removed DLOCALEDIR.
	* gdmconfig/gdmconfig.c/h: include config.h in c file, not h.
	i18n fixes, gui now translated.

Tue Feb 27 00:25:10 2001  George Lebl <jirka@5z.com>

	* Release 2.0.99

Tue Feb 27 00:25:09 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/xdmcp.c:  Fixed xdmcp closing routine, and
	  close the xdmcp fd before restarting after a HUP so that xdmcp
	  doesn't fail.  If we fail when initting xdmcp don't die, but just
	  disable xdmcp and continue after screaming stuff into syslog.

Wed Feb 21 01:46:34 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, config/Default: Setup cursor in gdmlogin

Tue Feb 20 13:57:18 2001  George Lebl <jirka@5z.com>

	* config/Default: Idea from peter winnberg <peter@rsub.com>, to set
	  the cursor to left_ptr to be nicer

Mon Feb 19 09:01:56 2001  Yukihiro Nakai <nakai@gnome.gr.jp>

	* gui/gdmconfig.desktop: Add Japanese translation.

Mon Feb 19 21:37:07 2001  George Lebl <jirka@5z.com>

	Patch from Tim Jansen <tim@tjansen.de>

	* docs/C/gdm.sgml:  fixed docs in terms of true/false vs. 1/0 and
	  add new values

	 * gui/gdmlogin.c, gui/gdmchooser.c:  change GdmDebug to gboolean
	   and add some checks for config values
