@@ -1,3 +1,8 @@
+Wed Feb 28 19:23:42 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmchooser.c:  Apply patch from "Matthias Clasen"
+	  <Matthias.Clasen@poet.de>, to fix issues with xdm.
+
 Web Feb 28 18:47:14 2001  Lee Mallabone <lee0@callnetuk.com>
 
         * gdmconfig-pam, gdmconfig-security: New files to support
